--- a/app/challenges/style.styl
+++ b/app/challenges/style.styl
@@ -14,10 +14,14 @@
     margin-top 20px
     margin-bottom 17px
 
-    .reward-icon
+    .reward-credits-icon
       font-size 65px
 
-    .credits
+    .reward-points-icon
+      font-size 50px
+      margin-bottom 7px
+
+    .reward-text
       font-size 16px
       font-weight bold
       margin-top -8px
