Do not save user until user confirms email address

--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -1,15 +1,8 @@
-.popover-navigation
-  margin-bottom 12px
-  margin-left 12px
-  margin-right 12px
+// Add this to dynamically hiding / showing loader that has animation on it
+// https://github.com/angular/angular.js/issues/8224
+// http://jsfiddle.net/PvS8k/4/
+.loader.ng-animate
+  -webkit-animation: none 0s
 
-.tour-tour
-  .btn
-    text-transform none
-    box-shadow none
-    &.disabled
-      background-color white
-
-  .btn-group
-    margin-right 70px
-
+.loader
+  font-size 60px
