--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -43,15 +43,23 @@
     .col-md-4
       .panel.panel-default.buy-sheet-music-panel
         .panel-body
-          strong SUBMISSION GUIDELINES
-          .row
-            .col-xs-3.text-info.text-center
-              i.link-panel-icon.fa.fa-book.fa-3x
-            .col-xs-9
-              div Find every GuitarQuest level 1 piece in <em>Bridges (Preparatory Level)</em>
-              a
-                span Read More&nbsp;
-                span.fa.fa-angle-double-right
+          p <strong>SUBMISSION GUIDELINES</strong>
+          p Submit a video of you performing <em>{{ctrl.piece.name}}</em> from beginning to end. Make sure both of your hands are visible throughout the entire video.
+
+          p After submission, a GuitarQuest teacher will give you a grade and personalized feedback within 24 hours. You will receive points based on your grade.
+
+          p You can then resubmit another video at any time.
+
+      .panel.panel-default.listen-to-the-recording
+        .panel-body
+          p <strong>LISTEN TO THE RECORDING</strong>
+          iframe(
+            ng-src="{{ctrl.getSpotifySrc()}}"
+            width="100%"
+            height="80"
+            frameborder="0"
+            allowtransparency="true"
+          )
 
       //- .panel.panel-default
       //-   .panel-body
@@ -89,11 +97,3 @@
               a
                 span Read More&nbsp;
                 span.fa.fa-angle-double-right
-
-      iframe(
-        ng-src="{{ctrl.getSpotifySrc()}}"
-        width="100%"
-        height="80"
-        frameborder="0"
-        allowtransparency="true"
-      )
