Rename quest to challenge everywhere. And add better validation for username and password

--- a/app/challenges/style.styl
+++ b/app/challenges/style.styl
@@ -1,13 +1,13 @@
-.guitar-quest-quests
-  .quest-panel
+.guitar-quest-challenges
+  .challenge-panel
     padding-top 10px
     padding-bottom 10px
     border 2px solid #FF9800
 
-  .quest-title
+  .challenge-title
     font-size 20px // same size as piece title on pieces page
 
-  .quest-panel-body
+  .challenge-panel-body
     padding 10px 20px
 
   .reward
@@ -37,5 +37,5 @@
     font-weight 400
     margin-bottom 10px
 
-  .no-quests
+  .no-challenges
     margin-top 100px
