--- a/app/how_it_works/template.jade
+++ b/app/how_it_works/template.jade
@@ -12,7 +12,7 @@
         i.fa.fa-music.how-it-works-icon.text-info
       .col-md-9
         h3 Choose a Guitar Piece
-        p Choose from a selection of classical guitar pieces for your current level. Read tutorials or request a private lesson if you need help.
+        p Choose from a selection of classical guitar pieces for your current level. Read tutorials or rechallenge a private lesson if you need help.
     .row
       .col-md-3
         i.fa.fa-upload.how-it-works-icon.text-warning
