--- a/app/pricing/template.jade
+++ b/app/pricing/template.jade
@@ -14,7 +14,7 @@
             span  Unlimited video uploads
           div
             i.fa.fa-check
-            span  Unlimited quests
+            span  Unlimited challenges
           div
             i.fa.fa-check
             span  Access to Private Lessons
@@ -34,7 +34,7 @@
             span  Unlimited video uploads
           div
             i.fa.fa-check
-            span  Unlimited quests
+            span  Unlimited challenges
           div
             i.fa.fa-check
             span  Access to Private Lessons
