--- a/local_modules/directives/gq_navbar/template.jade
+++ b/local_modules/directives/gq_navbar/template.jade
@@ -29,13 +29,19 @@
             li.challenges(ng-class="{active: ctrl.stateIncludes('guitarQuest.challenges')}")
               a(ui-sref='guitarQuest.challenges')
                 span Challenges
-                span.badge.link-badge.badge-warning(ng-if='ctrl.notificationCount.quest') {{ctrl.notificationCount.quest}}
+                span.badge.link-badge.badge-warning(ng-if='ctrl.notificationCount.challenge') {{ctrl.notificationCount.challenge}}
 
             li(
               ng-if='ctrl.hasRole("teacher")'
               ng-class="{active: ctrl.stateIncludes('guitarQuest.submittedPieces')}"
             )
               a(ui-sref='guitarQuest.submittedPieces') Submitted
+
+            li(
+              ng-if='ctrl.hasRole("teacher")'
+              ng-class="{active: ctrl.stateIncludes('guitarQuest.managePieces')}"
+            )
+              a(ui-sref='guitarQuest.managePieces') Manage Pieces
 
           ul.nav.navbar-nav.navbar-right(ng-if='!ctrl.isLoggedIn()')
             li(ng-class="{active: ctrl.stateIncludes('guitarQuest.login')}")
