--- a/local_modules/directives/gq_notifications/template.jade
+++ b/local_modules/directives/gq_notifications/template.jade
@@ -1,6 +1,6 @@
 .gq-alerts
   //- .test Hello {{notificationsCtrl.notifications.length}}
-  //- .test Hello2 {{navbarCtrl.notificationCount.quest}}
+  //- .test Hello2 {{navbarCtrl.notificationCount.challenge}}
   alert.alert(
     ng-repeat='notification in notificationsCtrl.notifications'
     type='{{notification.type}}'
