--- a/app/confirm_email/template.jade
+++ b/app/confirm_email/template.jade
@@ -1,8 +1,10 @@
 .guitar-quest-confirm_email
-  .col-md-6.col-md-offset-3.text
-    .panel.panel-default(ng-if='!ctrl.loading')
-      .panel-body
-        h5 Confirm Your Email Address
-        p Thanks for signing up for GuitarQuest! We just sent a confirmation email to your registration email address. Click on the confirmation link in that email to complete your sign up.
-  .text-center(ng-if='ctrl.loading')
-    i.loader.fa.fa-refresh.fa-spin.fa-3x
+  .row.content(ng-if='!ctrl.loading')
+    .col-md-6.col-md-offset-3
+      .panel.panel-default
+        .panel-body
+          h5 Confirm Your Email Address
+          p Thanks for signing up for GuitarQuest! We just sent a confirmation email to your registration email address. Click on the confirmation link in that email to complete your sign up.
+  .row.content(ng-if='ctrl.loading')
+    .text-center
+      i.loader.fa.fa-refresh.fa-spin.fa-3x
