--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -1,23 +1,19 @@
 .guitar-quest-landing
   .guitar-background
     margin-top -23px
+    margin-bottom -23px
     background-image url("/guitar.jpg")
-    background-position: center center
+    background-position: 0% 25%
+    background-size: cover
     background-repeat: no-repeat
-    background-attachment: fixed
-    background-color white
-    -webkit-background-size cover
-    -moz-background-size cover
-    -o-background-size cover
-    background-size cover
-    height 600px
+    height 650px
+    border-bottom 2px solid #C6C6C6
 
   .title
     font-weight 400
     color #575757
     character-spacing -1px
-    margin-top 50px
-    margin-bottom 0px
+    margin-bottom 40px
 
   .subtitle
     font-size 31px
@@ -27,5 +23,32 @@
 
   .action-btn
     margin-top 25px
-    width 250px
+    width 350px
+    font-size 20px
     text-transform none
+    background-color #5278A9
+
+  .how-it-works-banner
+    background-color white
+
+  .description
+    font-size 18px
+
+  .how-it-works-icon
+    font-size 50px
+
+  .details
+    color #AD9F9E
+
+  .details-header
+    font-weight bold
+
+  .description-block
+    margin-bottom 25px
+
+  .sign-up-title
+    margin-bottom 25px
+
+  .sign-up-btn
+    margin-bottom 10px
+    margin-top 30px
