Add background guitar picture to login and signup pages

--- a/app/login/style.styl
+++ b/app/login/style.styl
@@ -1,4 +1,19 @@
 .guitar-quest-login
+  .guitar-background
+    margin-top -23px
+    margin-bottom -23px
+    background-position: center bottom
+    background-image: url("/guitar_3.jpg")
+    // background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("/guitar_3.jpg")
+    background-size: cover
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover
+    background-repeat: no-repeat
+    height 640px
+    border-bottom 2px solid #C6C6C6
+    width: 100%
+
   .title
     font-size 28px
 
