--- a/app/create_account/template.jade
+++ b/app/create_account/template.jade
@@ -1,10 +1,14 @@
-.guitar-quest-create-account.container
-  .col-xs-12.col-md-4.col-md-offset-4
-    .create-account-panel.panel.panel-default
-      .panel-body
-        h4.text-center.title Sign up
-        alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
-        form(ng-submit='ctrl.register()')
-          input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
-          input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
-          button.create-account-btn.btn.btn-primary.btn-block(type='submit') Sign up
+.guitar-quest-create-account
+  .guitar-background
+    .container
+      .col-xs-12.col-md-4.col-md-offset-4
+        .create-account-panel.panel.panel-default
+          .panel-body
+            h4.text-center.title Sign up
+            alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
+            form(ng-submit='ctrl.register()')
+              input.form-control(id='firstName' type='text' placeholder='first name' ng-model='ctrl.form.firstName')
+              input.form-control(id='lastName' type='text' placeholder='last name' ng-model='ctrl.form.lastName')
+              input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
+              input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
+              button.create-account-btn.btn.btn-primary.btn-block(type='submit') Sign up
