Another refactor of the landing page to be more intuitive

--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -3,13 +3,14 @@
     margin-top -23px
     margin-bottom -23px
     // background-position: 0% 25%
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/guitar.jpg")
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/guitar_4.jpg")
     background-size: cover
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover
     background-repeat: no-repeat
-    height 640px
+    // height 640px
+    height 350px
     border-bottom 2px solid #C6C6C6
     width: 100%
     // background-position: center top
@@ -27,7 +28,7 @@
     color white
 
   .action-btn
-    margin-top 25px
+    margin-top 10px
     width 500px
     font-size 25px
     text-transform none
@@ -38,7 +39,7 @@
 
   .description-text
     color #999999
-    font-size 17px
+    font-size 16px
     line-height 27px
 
   .how-it-works-icon
@@ -68,7 +69,7 @@
     background-color white
 
   .resources
-    font-size 17px
+    font-size 16px
 
   .resource
     margin-bottom 20px
