--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -11,28 +11,52 @@
   .jumbotron.guitar-background
     .container
       .row
-        .col-md-8.col-md-offset-2.text-center
+        .col-md-12.text-center
           h2.title
-            div Take your classical guitar playing
-            div to the next level
-          .action-btn.btn.btn-warning.btn-lg Join for Free
+            //- Top 2
+            //- Learn classical guitar interactively
+            //- Learn classical guitar by studying great pieces
+            //- what is the goal when learning classical guitar - to learn pieces that people like (e.g) - why? various reasons
+            //- what makes guitarquest unique - the game elements. Tracking progress, levels, feedback system
+            //- learn classical guitar, learn classical guitar pieces
+            //- what's the distinguishing result of using the site - more fun, faster learning
+            //- the first thing the page should say is what the user is searching for / wanting:
+            //- Take your classical guitar playing to the next level - implies user is already good, and site helps them advance further. Works well with gamification
+            //- Learning classical guitar has never been so much fun - a little cheesy
+            //- The classical guitar school for the 21st century - a little to heavy for just a fun little site to learn guitar
+            //- Learn classical guitar by studying great pieces - the most direct, but a little dry. Also, isn't this true of all curriculums. What is different about this one?
+            //- Learn classical guitar - simple, but does not inspire
+            //- Learn classical guitar the fun way - are other ways normally not fun. No this one is more fun?
+            //- Learn to play amazing/fun/great/incredible classical guitar pieces
+            //- Learn the great classical guitar pieces
+            //- Learn stunning classical guitar pieces
+            //- Learn classical guitar with an online interactive game
+            //- Master classical guitar
+            //- Learn classical guitar, effortlessly
+            //- Learn classical guitar the fun way - fun associated with kid like activities
+            //- Learn classical guitar, interactively
+            //- Learn your favorite classical guitar pieces
+            //- Master classical guitar - too serious, would probably turn a lot of beginners away
+            div Learn classical guitar by studying great pieces.
+            //- https://medium.com/backchannel/this-video-game-solved-the-problem-of-learning-guitar-d0fcea6f0d3b#.s2egim8cz
+          .action-btn.btn.btn-warning.btn-lg Start learning for free
 
   .landing-page-section.background-white
     .container.text-center
       .row
         //- .text-center
-        h3.section-title How GuitarQuest Works
+        //- h3.section-title How GuitarQuest Works
         .col-md-4
-          i.fa.fa-book.how-it-works-icon.text-info
+          i.fa.fa-music.how-it-works-icon.text-info
           h4 1. Learn a Piece
-          p.description-text Choose a GuitarQuest piece from your current level. Learn at your own pace. Watch video tutorials or request a private lesson if you need help.
+          p.description-text Learn a GuitarQuest piece from your current level. Watch video tutorials or request a private lesson if you need help.
         .col-md-4
-          i.fa.fa-upload.how-it-works-icon.text-success
+          i.fa.fa-upload.how-it-works-icon.text-warning
           h4 2. Submit a Video
           p.description-text Upload a video performance of the piece. Receive written teacher feedback and earn points for your video.
         .col-md-4
-          i.fa.fa-star.how-it-works-icon.text-warning
-          h4 3. See your progress
+          i.fa.fa-bar-chart.how-it-works-icon.text-success
+          h4 3. Track your progress
           p.description-text Once you earn enough points, you will progress to the next level to unlock new, more challenging pieces to learn.
 
   .landing-page-section
