Save firstName and lastName to user

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -39,7 +39,7 @@
             //- Master classical guitar - too serious, would probably turn a lot of beginners away
             div Learn classical guitar by studying great pieces.
             //- https://medium.com/backchannel/this-video-game-solved-the-problem-of-learning-guitar-d0fcea6f0d3b#.s2egim8cz
-          .action-btn.btn.btn-warning.btn-lg Start learning for free
+          a.action-btn.btn.btn-warning.btn-lg(href='' ui-sref='guitarQuest.signUp') Start learning for free
 
   .landing-page-section.background-white
     .container.text-center
