--- a/app/sign_up/template.jade
+++ b/app/sign_up/template.jade
@@ -4,7 +4,7 @@
       .col-xs-12.col-md-4.col-md-offset-4
         .create-account-panel.panel.panel-default
           .panel-body
-            h4.text-center.title Sign up
+            h4.text-center.title Sign up for free
             alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
             form(ng-submit='ctrl.register()')
               input.form-control(id='firstName' type='text' placeholder='first name' ng-model='ctrl.form.firstName')
